Restructured the whole code by adding new html and css code

--- a/index.html
+++ b/index.html
@@ -26,26 +26,33 @@
 
 <body>
   <div class="container">
-    <img src="images/image-equilibrium.jpg" class="img" alt="" srcset="">
+    <article>
+      <img src="images/image-equilibrium.jpg" class="img" alt="" srcset="">
+      
+      <h2>
+        Equilibrium #3429
+      </h2>
+      <p>
+        Our Equilibrium collection promotes balance and calm.
+      </p>
+      <ul>
+        <li> <img src="images/icon-ethereum.svg" alt="ETH img" srcset=""> 0.041 ETH</li>
+        <li> <img src="images/icon-clock.svg" alt="clock image" srcset=""> 3 days left</li>
+      </ul>
+    </article>
+    <article>
+      <img src="images/image-avatar.png" alt="avatar image of user" srcset="">
+      <p>Creation of Jules Wyvern</p>
+    </article>
+    <article>
 
-    <h1 class="heading">
-      Equilibrium #3429
-    </h1>
-    <p class="para">
-      Our Equilibrium collection promotes balance and calm.
-    </p>
+    </article>
+    <article>
 
-    <p>
-      0.041 ETH
-    </p>
-    <p>
-      3 days left
-    </p>
-<p>
-  Creation of Jules Wyvern
-</p>
+    </article>
+
   </div>
-
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
@@ -53,3 +60,32 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!! Done by me -->
+
+    <!-- <div class="container">
+      <img src="images/image-equilibrium.jpg" class="img" alt="" srcset="">
+  
+      <h1 class="heading">
+        Equilibrium #3429
+      </h1>
+      <p class="para">
+      </p>
+  
+      <p>
+        0.041 ETH
+      </p>
+      <p>
+        3 days left
+      </p>
+  <p>
+    Creation of Jules Wyvern
+  </p>
+    </div> -->
